--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^5.7.1",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
@@ -21,6 +22,7 @@
     "@mantine/ds": "^6.0.9",
     "@mantine/hooks": "^6.0.8",
     "@tabler/icons-react": "^2.17.0",
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
