--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
-    "@mantine/core": "^6.0.8",
+    "@mantine/core": "^6.0.10",
     "@mantine/dates": "^6.0.9",
     "@mantine/ds": "^6.0.9",
     "@mantine/form": "^6.0.9",
@@ -29,8 +29,10 @@
     "@tabler/icons-react": "^2.17.0",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "yup": "^1.1.1"
   }
 }
