--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
     "react-router-dom": "^6.10.0",
     "yup": "^1.1.1"
   }
