--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-favicon": "^2.0.3",
     "react-router-dom": "^6.10.0",
+    "rxjs": "^6.6.7",
     "yup": "^1.1.1"
   }
 }
